--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,6 @@
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.10"
     repositories {
         google()
         mavenCentral()
@@ -24,14 +23,13 @@ buildscript {
     dependencies {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath(libs.android.gradle.plugin)
+        classpath(libs.kotlin.gradle.plugin)
+        classpath(libs.spotless.plugin.gradle)
     }
 }
 
-plugins {
-    id "com.diffplug.spotless" version "5.11.1"
-}
+apply plugin: "com.diffplug.spotless"
 
 allprojects {
     repositories {
@@ -56,7 +54,7 @@ spotless {
     }
     kotlin {
         target '**/src/**/*.kt'
-        ktlint("0.41.0")
+        ktlint(libs.versions.ktlint.get())
         licenseHeaderFile rootProject.file('spotless/copyright.kt')
     }
 }
