--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         tools:ignore="AllowBackup,UnusedAttribute">
 
         <service
-            android:name="com.litekite.ime.sservice.ImeService"
+            android:name="com.litekite.ime.service.ImeService"
             android:exported="true"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_INPUT_METHOD">
