--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ buildscript {
         classpath(libs.android.gradle.plugin)
         classpath(libs.kotlin.gradle.plugin)
         classpath(libs.spotless.plugin.gradle)
+        classpath(libs.hilt.gradle.plugin)
     }
 }
 
