--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,9 @@ androidx-appcompat = "1.3.0"
 # UI
 material = "1.3.0"
 
+# Hilt DI
+hilt = "2.36"
+
 # JVM Unit Tests
 junit = "4.13.2"
 
@@ -28,6 +31,7 @@ androidx-espresso-core = "3.3.0"
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "android-gradle-plugin" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 spotless-plugin-gradle = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless-plugin-gradle" }
+hilt-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
 
 # Kotlin
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -38,6 +42,13 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 
 # UI
 material = { module = "com.google.android.material:material", version.ref = "material" }
+
+# Hilt DI
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+
+# Hilt DI - JVM / Instrumentation Tests
+hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 
 # JVM Unit Tests
 junit = { module = "junit:junit", version.ref = "junit" }
